fix: 자식에 overflow 속성을 줘서 해결

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -14,6 +14,7 @@ ul {
 }
 
 li {
+
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
@@ -30,21 +31,25 @@ li {
   overflow: hidden;
 }
 
-.box-Menu {
-  width: 300px;
+#box-Menu {
+  width: 240px;
   height: 100vh;
-  min-width: 300px; /* 최소 너비 설정 */
-  max-width: 300px; /* 최대 너비 설정 */
   background-color: #eee;
   padding: 20px;
   overflow-y: auto;
+  overflow-x: hidden;
   max-height: 100%;
+}
+#box-Menu > li {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .box-Prompt {
   flex: 1;
   height: 100vh;
-  width: calc(100% - 300px);
+  width: calc(100% - 240px);
   display: flex;
   flex-direction: column;
   background-color: #fff;
@@ -82,8 +87,6 @@ li {
   cursor: pointer;
 }
 
-
 #btn-Submit:hover {
   background-color: #0056b3;
 }
-
